--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8" />
-    <title>Title</title>
-    <script src="js/main.js"></script>
+  <meta charset="UTF-8">
+  <title>ГОНКИ</title>
+
+
+  <link rel="stylesheet" href="public/css/style.css">
+
+
 </head>
+
 <body>
-    <h1>HTML</h1>
+  <div id="login-button">
+    <img src="https://dqcgrsy5v35b9.cloudfront.net/cruiseplanner/assets/img/icons/login-w-icon.png">
+    </img>
+  </div>
+  <div id="container">
+    <h1>Войти</h1>
+    <span class="close-btn">
+      <img src="https://cdn4.iconfinder.com/data/icons/miu/22/circle_close_delete_-128.png"></img>
+    </span>
+
+    <!--ВХОД-->
+    <input type="login" name="login" placeholder="Логин">
+    <input type="password" name="pass" placeholder="Пароль">
+    <a href="public/css/bg/lol.jpg">Войти</a>
+
+  </div>
+
+  </div>
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/TweenMax.min.js'></script>
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+  <script src="public/js/main.js"></script>
+
 </body>
+
 </html>
